--- a/scss/config/theme/_colors.scss
+++ b/scss/config/theme/_colors.scss
@@ -23,42 +23,9 @@ $semantic: (
 );
 
 $brand: (
-  primary: (
-    0: #f0fdfa,
-    1: #ccfbf1,
-    2: #99f6e4,
-    3: #5eead4,
-    4: #2dd4bf,
-    5: #14b8a6,
-    6: #0d9488,
-    7: #0f766e,
-    8: #115e59,
-    9: #134e4a,
-  ),
-  secondary: (
-    0: #f5f3ff,
-    1: #ede9fe,
-    2: #ddd6fe,
-    3: #c4b5fd,
-    4: #a78bfa,
-    5: #8b5cf6,
-    6: #7c3aed,
-    7: #6d28d9,
-    8: #5b21b6,
-    9: #4c1d95,
-  ),
-  neutral: (
-    0: #fafafa,
-    1: #f5f5f5,
-    2: #e6e6e6,
-    3: #d4d4d4,
-    4: #a3a3a3,
-    5: #737373,
-    6: #525252,
-    7: #404040,
-    8: #262626,
-    9: #171717,
-  ),
+  primary: map.get($colors, emerald),
+  secondary: map.get($colors, violet),
+  neutral: map.get($colors, neutral),
 );
 
 $extended: (
@@ -73,62 +40,62 @@ $extended: (
 $schemes: (
   light: (
     contrast: (
-      0: map.get($colors, grey, 1),
-      1: map.get($colors, grey, 2),
-      2: map.get($colors, grey, 3),
-      3: map.get($colors, grey, 4),
-      4: map.get($colors, grey, 5),
-      5: map.get($colors, grey, 6),
-      6: map.get($colors, grey, 7),
-      7: map.get($colors, grey, 8),
-      8: map.get($colors, grey, 9),
+      0: map.get($colors, neutral, 1),
+      1: map.get($colors, neutral, 2),
+      2: map.get($colors, neutral, 3),
+      3: map.get($colors, neutral, 4),
+      4: map.get($colors, neutral, 5),
+      5: map.get($colors, neutral, 6),
+      6: map.get($colors, neutral, 7),
+      7: map.get($colors, neutral, 8),
+      8: map.get($colors, neutral, 9),
       9: map.get($colors, black),
     ),
     surface: (
-      1: map.get($colors, grey, 0),
+      1: map.get($colors, neutral, 0),
       2: map.get($colors, white),
-      3: map.get($colors, grey, 1),
-      4: map.get($colors, grey, 2),
+      3: map.get($colors, neutral, 1),
+      4: map.get($colors, neutral, 2),
     ),
     border: (
-      1: map.get($colors, grey, 2),
-      2: map.get($colors, grey, 3),
+      1: map.get($colors, neutral, 2),
+      2: map.get($colors, neutral, 3),
     ),
     text: (
-      1: map.get($colors, grey, 9),
-      2: map.get($colors, grey, 6),
-      3: map.get($colors, grey, 4),
-      4: map.get($colors, grey, 3),
+      1: map.get($colors, neutral, 9),
+      2: map.get($colors, neutral, 6),
+      3: map.get($colors, neutral, 4),
+      4: map.get($colors, neutral, 3),
     ),
   ),
   dark: (
     contrast: (
       0: map.get($colors, black),
-      1: map.get($colors, grey, 9),
-      2: map.get($colors, grey, 8),
-      3: map.get($colors, grey, 7),
-      4: map.get($colors, grey, 6),
-      5: map.get($colors, grey, 5),
-      6: map.get($colors, grey, 4),
-      7: map.get($colors, grey, 3),
-      8: map.get($colors, grey, 2),
-      9: map.get($colors, grey, 1),
+      1: map.get($colors, neutral, 9),
+      2: map.get($colors, neutral, 8),
+      3: map.get($colors, neutral, 7),
+      4: map.get($colors, neutral, 6),
+      5: map.get($colors, neutral, 5),
+      6: map.get($colors, neutral, 4),
+      7: map.get($colors, neutral, 3),
+      8: map.get($colors, neutral, 2),
+      9: map.get($colors, neutral, 1),
     ),
     surface: (
-      1: map.get($colors, grey, 9),
-      2: map.get($colors, grey, 8),
-      3: map.get($colors, grey, 7),
-      4: map.get($colors, grey, 6),
+      1: map.get($colors, neutral, 9),
+      2: map.get($colors, neutral, 8),
+      3: map.get($colors, neutral, 7),
+      4: map.get($colors, neutral, 6),
     ),
     border: (
-      1: map.get($colors, grey, 8),
-      2: map.get($colors, grey, 7),
+      1: map.get($colors, neutral, 8),
+      2: map.get($colors, neutral, 7),
     ),
     text: (
-      1: map.get($colors, grey, 0),
-      2: map.get($colors, grey, 3),
-      3: map.get($colors, grey, 5),
-      4: map.get($colors, grey, 6),
+      1: map.get($colors, neutral, 0),
+      2: map.get($colors, neutral, 3),
+      3: map.get($colors, neutral, 5),
+      4: map.get($colors, neutral, 6),
     ),
   ),
 );
