--- a/scss/api/_layout.scss
+++ b/scss/api/_layout.scss
@@ -191,13 +191,14 @@
   }
 }
 
+/* stylelint-disable */
 // Stack elements on top of each other
 @mixin stack {
   align-items: flex-end;
   display: inline-grid;
   place-items: center;
 
-  * {
+  & > * {
     grid-column-start: 1;
     grid-row-start: 1;
     opacity: 0.6;
@@ -206,18 +207,19 @@
     z-index: 1;
   }
 
-  *:nth-child(1) {
+  & > *:nth-child(1) {
     opacity: 1;
     transform: translateY(0) scale(1);
     z-index: 3;
   }
 
-  *:nth-child(2) {
+  & > *:nth-child(2) {
     opacity: 0.8;
     transform: translateY(0.5rem) scale(0.95);
     z-index: 2;
   }
 }
+/* stylelint-enable */
 
 @mixin even-columns($width: 300px, $gap: md) {
   $gap: if(theme-has-key(spacing, $gap), spacing($gap), $gap);
