--- a/scss/config/theme/_colors.scss
+++ b/scss/config/theme/_colors.scss
@@ -37,65 +37,69 @@ $extended: (
 
 // ---- Colors Schemes ----
 
+// Set the grey tone from the token colors:
+// slate, grey, zinc, neutral or stone.
+$grey-tone: stone;
+
 $schemes: (
   light: (
     contrast: (
-      0: map.get($colors, neutral, 1),
-      1: map.get($colors, neutral, 2),
-      2: map.get($colors, neutral, 3),
-      3: map.get($colors, neutral, 4),
-      4: map.get($colors, neutral, 5),
-      5: map.get($colors, neutral, 6),
-      6: map.get($colors, neutral, 7),
-      7: map.get($colors, neutral, 8),
-      8: map.get($colors, neutral, 9),
+      0: map.get($colors, $grey-tone, 1),
+      1: map.get($colors, $grey-tone, 2),
+      2: map.get($colors, $grey-tone, 3),
+      3: map.get($colors, $grey-tone, 4),
+      4: map.get($colors, $grey-tone, 5),
+      5: map.get($colors, $grey-tone, 6),
+      6: map.get($colors, $grey-tone, 7),
+      7: map.get($colors, $grey-tone, 8),
+      8: map.get($colors, $grey-tone, 9),
       9: map.get($colors, black),
     ),
     surface: (
-      1: map.get($colors, neutral, 0),
+      1: map.get($colors, $grey-tone, 0),
       2: map.get($colors, white),
-      3: map.get($colors, neutral, 1),
-      4: map.get($colors, neutral, 2),
+      3: map.get($colors, $grey-tone, 1),
+      4: map.get($colors, $grey-tone, 2),
     ),
     border: (
-      1: map.get($colors, neutral, 2),
-      2: map.get($colors, neutral, 3),
+      1: map.get($colors, $grey-tone, 2),
+      2: map.get($colors, $grey-tone, 3),
     ),
     text: (
-      1: map.get($colors, neutral, 9),
-      2: map.get($colors, neutral, 6),
-      3: map.get($colors, neutral, 4),
-      4: map.get($colors, neutral, 3),
+      1: map.get($colors, $grey-tone, 9),
+      2: map.get($colors, $grey-tone, 6),
+      3: map.get($colors, $grey-tone, 4),
+      4: map.get($colors, $grey-tone, 3),
     ),
   ),
   dark: (
     contrast: (
       0: map.get($colors, black),
-      1: map.get($colors, neutral, 9),
-      2: map.get($colors, neutral, 8),
-      3: map.get($colors, neutral, 7),
-      4: map.get($colors, neutral, 6),
-      5: map.get($colors, neutral, 5),
-      6: map.get($colors, neutral, 4),
-      7: map.get($colors, neutral, 3),
-      8: map.get($colors, neutral, 2),
-      9: map.get($colors, neutral, 1),
+      1: map.get($colors, $grey-tone, 9),
+      2: map.get($colors, $grey-tone, 8),
+      3: map.get($colors, $grey-tone, 7),
+      4: map.get($colors, $grey-tone, 6),
+      5: map.get($colors, $grey-tone, 5),
+      6: map.get($colors, $grey-tone, 4),
+      7: map.get($colors, $grey-tone, 3),
+      8: map.get($colors, $grey-tone, 2),
+      9: map.get($colors, $grey-tone, 1),
     ),
     surface: (
-      1: map.get($colors, neutral, 9),
-      2: map.get($colors, neutral, 8),
-      3: map.get($colors, neutral, 7),
-      4: map.get($colors, neutral, 6),
+      1: map.get($colors, $grey-tone, 9),
+      2: map.get($colors, $grey-tone, 8),
+      3: map.get($colors, $grey-tone, 7),
+      4: map.get($colors, $grey-tone, 6),
     ),
     border: (
-      1: map.get($colors, neutral, 8),
-      2: map.get($colors, neutral, 7),
+      1: map.get($colors, $grey-tone, 8),
+      2: map.get($colors, $grey-tone, 7),
     ),
     text: (
-      1: map.get($colors, neutral, 0),
-      2: map.get($colors, neutral, 3),
-      3: map.get($colors, neutral, 5),
-      4: map.get($colors, neutral, 6),
+      1: map.get($colors, $grey-tone, 0),
+      2: map.get($colors, $grey-tone, 3),
+      3: map.get($colors, $grey-tone, 5),
+      4: map.get($colors, $grey-tone, 6),
     ),
   ),
 );
