--- a/scss/config/_typography.scss
+++ b/scss/config/_typography.scss
@@ -22,7 +22,7 @@ $use-hyphens: true !default;
 $base-font-size: 16px !default;
 $base-font-family: list.join('Open Sans', $_font-sans) !default;
 
-$headings-color: text-1 !default;
+$headings-color: txt-1 !default;
 $headings-font-family: list.join('Montserrat', $_font-sans) !default;
 $headings-font-weight: medium !default;
 
