--- a/scss/api/_focus.scss
+++ b/scss/api/_focus.scss
@@ -13,7 +13,7 @@ $_default-color: accent(5);
 $_default-width: 2px;
 $_default-style: solid;
 $_default-offset: 2px;
-$_default-offset-color: fill(surface, 1);
+$_default-offset-color: fill(srf, 1);
 
 // -------------------------------------
 //   Functions
