--- a/scss/config/theme/_colors.scss
+++ b/scss/config/theme/_colors.scss
@@ -41,9 +41,11 @@ $extended: (
 // slate, grey, zinc, neutral or stone.
 $grey-tone: stone;
 
+// Default Scheme colors:
+// cnt (contrast), srf (surface), brd (border) and txt (text).
 $schemes: (
   light: (
-    contrast: (
+    cnt: (
       0: map.get($colors, $grey-tone, 1),
       1: map.get($colors, $grey-tone, 2),
       2: map.get($colors, $grey-tone, 3),
@@ -55,17 +57,17 @@ $schemes: (
       8: map.get($colors, $grey-tone, 9),
       9: map.get($colors, black),
     ),
-    surface: (
+    srf: (
       1: map.get($colors, $grey-tone, 0),
       2: map.get($colors, white),
       3: map.get($colors, $grey-tone, 1),
       4: map.get($colors, $grey-tone, 2),
     ),
-    border: (
+    brd: (
       1: map.get($colors, $grey-tone, 2),
       2: map.get($colors, $grey-tone, 3),
     ),
-    text: (
+    txt: (
       1: map.get($colors, $grey-tone, 9),
       2: map.get($colors, $grey-tone, 6),
       3: map.get($colors, $grey-tone, 4),
@@ -73,7 +75,7 @@ $schemes: (
     ),
   ),
   dark: (
-    contrast: (
+    cnt: (
       0: map.get($colors, black),
       1: map.get($colors, $grey-tone, 9),
       2: map.get($colors, $grey-tone, 8),
@@ -85,17 +87,17 @@ $schemes: (
       8: map.get($colors, $grey-tone, 2),
       9: map.get($colors, $grey-tone, 1),
     ),
-    surface: (
+    srf: (
       1: map.get($colors, $grey-tone, 9),
       2: map.get($colors, $grey-tone, 8),
       3: map.get($colors, $grey-tone, 7),
       4: map.get($colors, $grey-tone, 6),
     ),
-    border: (
+    brd: (
       1: map.get($colors, $grey-tone, 8),
       2: map.get($colors, $grey-tone, 7),
     ),
-    text: (
+    txt: (
       1: map.get($colors, $grey-tone, 0),
       2: map.get($colors, $grey-tone, 3),
       3: map.get($colors, $grey-tone, 5),
