--- a/scss/internal/_generators.scss
+++ b/scss/internal/_generators.scss
@@ -68,7 +68,6 @@ $_standard-pseudo-utils: ();
 $_responsive-class-utils: ();
 $_responsive-pseudo-utils: ();
 
-// TODO: Default value generation (i.e., rounded = rounded-md)
 @mixin _create-utility-maps($utilities) {
   $util-glue: config.$utility-glue;
   $prefix: config.$prefix;
@@ -78,9 +77,9 @@ $_responsive-pseudo-utils: ();
     $values: map.get($utility-map, values);
     $screens: map.get(config.$theme, screens);
     $pseudos: if(map.has-key($utility-map, pseudos), map.get($utility-map, pseudos), ());
-    $local-vars: map.get($utility-map, local-vars);
     $responsive: map.get($utility-map, responsive);
-    // $default-value: if(map.has-key($utility-map, default), map.get($utility-map, default), null);
+    $local-vars: map.get($utility-map, local-vars);
+    $default-value: if(map.has-key($utility-map, default), map.get($utility-map, default), null);
 
     // If the values are a list or string, convert it into a map
     @if meta.type-of($values) == 'string' or meta.type-of(list.nth($values, 1)) != 'list' {
@@ -102,8 +101,9 @@ $_responsive-pseudo-utils: ();
       // Use custom class name if present
       $class-name: if(map.has-key($utility-map, class), map.get($utility-map, class), list.nth($properties, 1));
       $class-name: if($class-name == null, '', str-escape($class-name));
+      $prefixed-class-name: #{$prefix}#{$class-name};
       $class-name-modifier: if($key, str-escape(if($class-name == '', '', '-') + $key), '');
-      $compiled-class-name: #{$prefix}#{$class-name}#{$class-name-modifier};
+      $compiled-class-name: #{$prefixed-class-name}#{$class-name-modifier};
 
       @if $value != null {
         @if meta.type-of($value) == 'string' {
@@ -112,40 +112,71 @@ $_responsive-pseudo-utils: ();
 
         $properties-map: map-utility-class-props($properties, $local-vars, $value);
 
-        $map: (
-          '#{$compiled-class-name}': (
-            parent: null,
-            category: standard,
-            class-name: $class-name,
-            class-name-modifier: $class-name-modifier,
-            selector: '.#{$compiled-class-name}',
-            responsive: $responsive,
-            default: map.get($utility-map, default),
-            properties: $properties-map,
-          ),
+        $map-v: (
+          parent: null,
+          category: standard,
+          class-name: $class-name,
+          class-name-modifier: $class-name-modifier,
+          selector: '.#{$compiled-class-name}',
+          responsive: $responsive,
+          properties: $properties-map,
         );
 
+        $map: (
+          '#{$compiled-class-name}': $map-v,
+        );
         $class-set: map.merge($class-set, $map);
+
+        // Set default
+        @if $key == $default-value {
+          $map: (
+            '#{$prefixed-class-name}':
+              map.merge(
+                $map-v,
+                (
+                  selector: '.#{$prefixed-class-name}',
+                )
+              ),
+          );
+          $class-set: map.merge($class-set, $map);
+        }
 
         // Pseudo / state variants
         @each $pseudo in $pseudos {
           $compiled-pseudo-name: str-escape(#{$pseudo}#{$util-glue}#{$compiled-class-name});
 
+          $map-v: (
+            parent: '.#{$compiled-class-name}',
+            category: pseudo,
+            class-name: $class-name,
+            class-name-modifier: $class-name-modifier,
+            selector: '.#{$compiled-pseudo-name}#{pseudo-class($pseudo)}',
+            responsive: $responsive,
+            pseudo: $pseudo,
+            properties: $properties-map,
+          );
+
           $map: (
-            '#{$compiled-pseudo-name}': (
-              parent: '.#{$compiled-class-name}',
-              category: pseudo,
-              class-name: $class-name,
-              class-name-modifier: $class-name-modifier,
-              selector: '.#{$compiled-pseudo-name}#{pseudo-class($pseudo)}',
-              responsive: $responsive,
-              pseudo: $pseudo,
-              default: map.get($utility-map, default),
-              properties: $properties-map,
-            ),
+            '#{$compiled-pseudo-name}': $map-v,
           );
 
           $pseudo-set: map.merge($pseudo-set, $map);
+
+          // Set default
+          @if $key == $default-value {
+            $default-pseudo-name: str-escape(#{$pseudo}#{$util-glue}#{$prefixed-class-name});
+
+            $map: (
+              '#{$default-pseudo-name}':
+                map.merge(
+                  $map-v,
+                  (
+                    selector: '.#{$default-pseudo-name}',
+                  )
+                ),
+            );
+            $class-set: map.merge($class-set, $map);
+          }
         }
       }
     }
@@ -172,8 +203,9 @@ $_responsive-pseudo-utils: ();
           // Use custom class name if present
           $class-name: if(map.has-key($utility-map, class), map.get($utility-map, class), list.nth($properties, 1));
           $class-name: if($class-name == null, '', str-escape($class-name));
+          $prefixed-class-name: #{$prefix}#{$class-name};
           $class-name-modifier: if($key, str-escape(if($class-name == '', '', '-') + $key), '');
-          $compiled-class-name: #{$prefix}#{$class-name}#{$class-name-modifier};
+          $compiled-class-name: #{$prefixed-class-name}#{$class-name-modifier};
 
           @if $value != null {
             @if meta.type-of($value) == 'string' {
@@ -182,20 +214,37 @@ $_responsive-pseudo-utils: ();
 
             $properties-map: map-utility-class-props($properties, $local-vars, $value);
 
+            $map-v: (
+              category: standard,
+              class-name: $class-name,
+              class-name-modifier: $class-name-modifier,
+              selector: '.#{$infix}#{$compiled-class-name}',
+              responsive: $responsive,
+              screen: $screen,
+              properties: $properties-map,
+            );
+
             $map: (
-              '#{$infix}#{$compiled-class-name}': (
-                category: standard,
-                class-name: $class-name,
-                class-name-modifier: $class-name-modifier,
-                selector: '.#{$infix}#{$compiled-class-name}',
-                responsive: $responsive,
-                screen: $screen,
-                default: map.get($utility-map, default),
-                properties: $properties-map,
-              ),
+              '#{$infix}#{$compiled-class-name}': $map-v,
             );
 
             $class-set: map.merge($class-set, $map);
+
+            // Set default
+            @if $key == $default-value {
+              $default-responsive-name: #{$infix}#{$prefixed-class-name};
+
+              $map: (
+                '#{$default-responsive-name}':
+                  map.merge(
+                    $map-v,
+                    (
+                      selector: '.#{$default-responsive-name}',
+                    )
+                  ),
+              );
+              $class-set: map.merge($class-set, $map);
+            }
           }
         }
 
