--- a/scss/api/_index.scss
+++ b/scss/api/_index.scss
@@ -6,6 +6,7 @@
 @forward 'gradient';
 @forward 'layer';
 @forward 'layout';
+@forward 'mask';
 @forward 'media-query';
 @forward 'shadow';
 @forward 'size';
