--- a/scss/components/_indicator.scss
+++ b/scss/components/_indicator.scss
@@ -1,3 +1,86 @@
 // --------------------------------
-//   Indicator Component
+//   indicator Components
 // --------------------------------
+
+@use '../config';
+@use '../api' as *;
+
+// --------------------------------
+//   Vars
+// --------------------------------
+
+$class: '.indicator';
+
+// --------------------------------
+//   Mixins
+// --------------------------------
+
+@mixin default {
+  @include transition((color, background-color, border-color, transform), duration(fast));
+
+  display: inline-flex;
+  position: relative;
+  width: max-content;
+
+  &__item {
+    bottom: auto;
+    left: auto;
+    position: absolute;
+    right: 0;
+    top: 0;
+    transform: translate(var(--koi-translate-x, 50%), var(--koi-translate-y, -50%)) rotate(var(--koi-rotate, 0))
+      skew(var(--koi-skew-x, 0)) skewY(var(--koi-skew-y, 0)) scaleX(var(--koi-scale-x, 1)) scaleY(var(--koi-scale-y, 1));
+    z-index: 1;
+  }
+
+  &--top {
+    --koi-translate-y: -50%;
+
+    bottom: auto;
+    top: 0;
+  }
+
+  &--middle {
+    --koi-translate-y: -50%;
+    bottom: 50%;
+    top: 50%;
+  }
+
+  &--bottom {
+    --koi-translate-y: 50%;
+
+    bottom: 0;
+    top: auto;
+  }
+
+  &--start {
+    --koi-translate-x: -50%;
+
+    left: 0;
+    right: auto;
+  }
+
+  &--center {
+    --koi-translate-x: -50%;
+
+    left: 50%;
+    right: 50%;
+  }
+
+  &--end {
+    --koi-translate-x: 50%;
+
+    left: auto;
+    right: 0;
+  }
+}
+
+// --------------------------------
+//   Styles
+// --------------------------------
+
+@mixin styles {
+  #{$class} {
+    @include default;
+  }
+}
